--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </ol>
             </blockquote>
             <h3>Example Usage:</h3>
-                <code>https://lightbody-url-shortener-ms.herokuapp.com/new/</code><br>
+                <code>https://lightbody-url-shortener-ms.herokuapp.com/new/http://google.com</code><br>
                 <code>https://lightbody-url-shortener-ms.herokuapp.com/new/https://www.freecodecamp.com</code>
             <h3>Example Outputs:</h3>
                 <code>{"original_url":"http://google.com","short_url":"lightbody-url-shortener-ms.herokuapp.com/Supervisorviolet"}</code><br>
